<resources>
    <string name="app_name">Namaste Gast</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register_here">registerHere</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_switcher">switcher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_save_contact">Save Contact</string>
    <string name="action_Rating">Rate Us</string>
    <string name="action_wishlist">Add To WishList</string>

    <string name="menu_ExpenseManager">Expense Manager</string>
    <string name="menu_guest_logoff">Sayonara Guest</string>
    <string name="menu_aproovals_pending">Pending Aproovals</string>
    <string name="menu_Search_Visitor">Search Visitor</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>
