<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_local_atm_black_24dp"
            android:title="@string/menu_ExpenseManager" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_weekend_black_24dp"
            android:title="@string/menu_guest_logoff" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_hourglass_empty_black_24dp"
            android:title="@string/menu_aproovals_pending" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_Search_Visitor" />
    </group>

    <item android:title="Controls">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings_power_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
